--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,11 @@
   "author": "Gainor Bostwick",
   "license": "ISC",
   "dependencies": {
+    "apollo-boost": "^0.1.13",
+    "graphql": "^0.13.2",
     "prop-types": "^15.6.1",
     "react": "^16.3.0",
+    "react-apollo": "^2.1.11",
     "react-dom": "^16.3.0",
     "react-router-dom": "^4.2.2",
     "styled-jsx": "^2.2.6"
